package group_assignment.entity;


public enum Role {
  ADMIN,
  EMPLOYEE
}
