package group_assignment.entity;

public enum Position {
  STAFF,
  LEADER,
  MANAGER,
  DIRECTOR,
  EXECUTIVE,
  CEO;
}
